# simulator

./: README.md  simulator.cabal
src/: Main.hs  Simulator.hs  Types.hs
