name:                simulator
version:             0.1.0.0
description:         simulator to play back trades stored in csvs
homepage:            https://github.com/andrewMacmurray/simulator#readme
license:             MIT
license-file:        LICENSE
author:              Andrew MacMurray
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simulator
  hs-source-dirs:      src
  main-is:             Simulator.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cassava
                     , pipes
                     , mtl
                     , vector
                     , bytestring
